force-app/main/default/objects/QuoteLineItem/fields/AllowforProjectmanagement__c.field-meta.xml
<CustomField>
    <fullName>AllowforProjectmanagement__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow for Project management</label>
    <type>Checkbox</type>
</CustomField>