force-app/main/default/objects/QuoteLineItem/fields/ExpenseAllowancePackage__c.field-meta.xml
<CustomField>
    <fullName>ExpenseAllowancePackage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expense %</label>
    <type>Checkbox</type>
</CustomField>