force-app/main/default/objects/QuoteLineItem/fields/Fraction__c.field-meta.xml
<CustomField>
    <fullName>Fraction__c</fullName>
    <label>Fraction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hours</fullName>
                <label>Hour(s)</label>
            </value>
            <value>
                <fullName>Days</fullName>
                <default>true</default>
                <label>Day(s)</label>
            </value>
            <value>
                <fullName>Pieces</fullName>
                <label>Piece(s)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>