force-app/main/default/objects/QuoteLineItem/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>License</label>
    <type>Checkbox</type>
</CustomField>