force-app/main/default/objects/QuoteLineItem/fields/LineItemCheckboxInfo__c.field-meta.xml
<CustomField>
    <fullName>LineItemCheckboxInfo__c</fullName>
    <formula>If(
ProjectManagementAllowancePackage__c = true,&quot;PM Allowance %&quot;,
If(
ExpenseAllowancePackage__c = true,&quot;Expense Allowance %&quot;,
IF(
SupplierCostsGroup__c = true, &quot;Supplier Costs Group&quot;,
IF(
Option__c = true, &quot;Option&quot;,
IF(
Intro__c = true, &quot;Intro&quot;,
If(
Outro__c = true, &quot;Outro&quot;,
&quot;&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item Checkbox Info</label>
    <type>Text</type>
</CustomField>