force-app/main/default/objects/QuoteLineItem/fields/ProjectManagementAllowancePackage__c.field-meta.xml
<CustomField>
    <fullName>ProjectManagementAllowancePackage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Management %</label>
    <type>Checkbox</type>
</CustomField>