force-app/main/default/objects/QuoteLineItem/fields/ProjectManagementAmount__c.field-meta.xml
<CustomField>
    <fullName>ProjectManagementAmount__c</fullName>
    <label>Project Management Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>