force-app/main/default/objects/QuoteLineItem/fields/ProjectManagementFee__c.field-meta.xml
<CustomField>
    <fullName>ProjectManagementFee__c</fullName>
    <label>Project Management Fee</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>