force-app/main/default/objects/QuoteLineItem/fields/QuantityAuto__c.field-meta.xml
<CustomField>
    <fullName>QuantityAuto__c</fullName>
    <description>Used in quote templates to display the respective quantities with expression of days/hours/pieces.</description>
    <formula>IF(Quantity = 1 &amp;&amp; ISPICKVAL(Fraction__c,&quot;Days&quot;), TEXT(Quantity) &amp; &quot; Tag&quot;,
IF(Quantity = 1 &amp;&amp; ISPICKVAL(Fraction__c,&quot;Hours&quot;), TEXT(Quantity) &amp; &quot; Stunde&quot;,
IF(Quantity = 1 &amp;&amp; ISPICKVAL(Fraction__c,&quot;Pieces&quot;), TEXT(Quantity) &amp; &quot; Stück&quot;,
IF(Quantity &gt; 1 &amp;&amp; ISPICKVAL(Fraction__c,&quot;Days&quot;), TEXT(Quantity) &amp; &quot; Täge&quot;,
IF(Quantity &gt; 1 &amp;&amp; ISPICKVAL(Fraction__c,&quot;Hours&quot;), TEXT(Quantity) &amp; &quot; Stunden&quot;,
IF(Quantity &gt; 1 &amp;&amp; ISPICKVAL(Fraction__c,&quot;Pieces&quot;), TEXT(Quantity) &amp; &quot; Stücke&quot;,
null
))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity</label>
    <type>Text</type>
</CustomField>