force-app/main/default/objects/QuoteLineItem/fields/Quote_Package__c.field-meta.xml
<CustomField>
    <fullName>Quote_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Package</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.QuoteId</field>
            <operation>equals</operation>
            <valueField>Quote_Package__c.Quote__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Quote_Package__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>