force-app/main/default/objects/QuoteLineItem/fields/SortNr__c.field-meta.xml
<CustomField>
    <fullName>SortNr__c</fullName>
    <label>Sort Nr.</label>
    <length>4</length>
    <type>Text</type>
</CustomField>