force-app/main/default/objects/QuoteLineItem/fields/SuperiorQuoteLineItem__c.field-meta.xml
<CustomField>
    <fullName>SuperiorQuoteLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Superior Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>SuperiorQuoteLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>