force-app/main/default/objects/QuoteLineItem/fields/SupplierCostsGroup__c.field-meta.xml
<CustomField>
    <fullName>SupplierCostsGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SC &gt;3K</label>
    <type>Checkbox</type>
</CustomField>