force-app/main/default/objects/QuoteLineItem/fields/TotalPriceF__c.field-meta.xml
<CustomField>
    <fullName>TotalPriceF__c</fullName>
    <formula>Quantity * UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price_F</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>