force-app/main/default/objects/QuoteLineItem/validationRules/Check_Project_Management.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Project_Management</fullName>
    <active>true</active>
    <errorConditionFormula>if(ProjectManagementFee__c &gt;0 &amp;&amp; AllowforProjectmanagement__c=false ,true,false )</errorConditionFormula>
    <errorMessage>This Product is not allowed for Project management</errorMessage>
</ValidationRule>