force-app/main/default/objects/QuoteLineItem/validationRules/QL001_Group_Must_Be_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>QL001_Group_Must_Be_Zero</fullName>
    <active>false</active>
    <description>Group can not have a price other than 0</description>
    <errorConditionFormula>AND(
ISPICKVAL( ProductType__c, &quot;Group&quot; ),
UnitPrice != 0
)</errorConditionFormula>
    <errorDisplayField>UnitPrice</errorDisplayField>
    <errorMessage>Group Line Items must have the Sales Price 0.
(QL001)</errorMessage>
</ValidationRule>