force-app/main/default/objects/QuoteLineItem/validationRules/QL002_Intro_Outro_Must_Be_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>QL002_Intro_Outro_Must_Be_Zero</fullName>
    <active>false</active>
    <description>Intro and Outro can not have a price other than 0</description>
    <errorConditionFormula>AND(
OR(
Intro__c=true,
Outro__c=true
),
UnitPrice != 0
)</errorConditionFormula>
    <errorDisplayField>Intro__c</errorDisplayField>
    <errorMessage>Intro or Outro Line Items must have the Sales Price 0.
(QL002)</errorMessage>
</ValidationRule>