force-app/main/default/objects/QuoteLineItem/validationRules/QL003_Text_Must_Be_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>QL003_Text_Must_Be_Zero</fullName>
    <active>false</active>
    <description>Text Line Items must be zero amount</description>
    <errorConditionFormula>AND( 
ISPICKVAL( ProductType__c, &quot;Text&quot; ), 
UnitPrice != 0 
)</errorConditionFormula>
    <errorDisplayField>ProductType__c</errorDisplayField>
    <errorMessage>Text Line Items must have the Sales Price 0.
(QL003)</errorMessage>
</ValidationRule>