force-app/main/default/objects/QuoteLineItem/validationRules/QL004_Entry_Invalid_Group.validationRule-meta.xml
<ValidationRule>
    <fullName>QL004_Entry_Invalid_Group</fullName>
    <active>true</active>
    <description>Checks for valid product combination data.</description>
    <errorConditionFormula>AND( 
ISPICKVAL(ProductType__c, &quot;Group&quot;), 
OR( 
ProjectManagementAllowancePackage__c=true, 
ExpenseAllowancePackage__c=true, 
Option__c = true,
SupplierCostsGroup__c = true,
License__c = true,
Intro__c=true, 
Outro__c=true 
) 
)</errorConditionFormula>
    <errorMessage>Invalid entry for Product Type &quot;Group&quot; 
(QL004)</errorMessage>
</ValidationRule>