force-app/main/default/objects/QuoteLineItem/validationRules/QL007_Entry_Invalid_Allowance.validationRule-meta.xml
<ValidationRule>
    <fullName>QL007_Entry_Invalid_Allowance</fullName>
    <active>true</active>
    <description>Checks for valid product combination data.</description>
    <errorConditionFormula>AND( 
ProjectManagementAllowancePackage__c =true, 
ExpenseAllowancePackage__c =true 
)</errorConditionFormula>
    <errorMessage>Product can not be Project Management Allowance and Expense Allowance. 
(QL007)</errorMessage>
</ValidationRule>