force-app/main/default/objects/QuoteLineItem/validationRules/QL008_Entry_Invalid_Option.validationRule-meta.xml
<ValidationRule>
    <fullName>QL008_Entry_Invalid_Option</fullName>
    <active>true</active>
    <description>Checks for valid product combination data.</description>
    <errorConditionFormula>AND( 
Option__c=true, 
OR( 
ProjectManagementAllowancePackage__c =true, 
ExpenseAllowancePackage__c =true, 
SupplierCostsGroup__c =true,
License__c=true,
Intro__c=true, 
Outro__c=true 
) 
)</errorConditionFormula>
    <errorMessage>Product can not be Option and of other kind. 
(QL008)</errorMessage>
</ValidationRule>