force-app/main/default/objects/QuoteLineItem/validationRules/QL009_PM_Allowance_Not_Manual_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>QL009_PM_Allowance_Not_Manual_Change</fullName>
    <active>false</active>
    <description>Does not allow to manually change the allowance due to %</description>
    <errorConditionFormula>AND( 
ISPICKVAL(Quote.ProjectManagementBillingType__c,&quot;AllowancePercent&quot;),
ProjectManagementAllowancePackage__c =true,
OR(
ISCHANGED(  UnitPrice  ),
ISCHANGED( Quantity )
)
)</errorConditionFormula>
    <errorMessage>You can not change the Project Management Allowance since it is calculated automatically due to the setting on the quote.
(QL009)</errorMessage>
</ValidationRule>