force-app/main/default/objects/QuoteLineItem/validationRules/QL011_Entry_Invalid_Text.validationRule-meta.xml
<ValidationRule>
    <fullName>QL011_Entry_Invalid_Text</fullName>
    <active>true</active>
    <description>Does not allow to manually change the allowance due to %</description>
    <errorConditionFormula>AND( 
ISPICKVAL(ProductType__c,&quot;Text&quot;), 
Intro__c=false, 
Outro__c=false 
)</errorConditionFormula>
    <errorMessage>Product Text must be of Intro or Outro. 
(QL011)</errorMessage>
</ValidationRule>