force-app/main/default/objects/QuoteLineItem/validationRules/QL012_Entry_Invalid_Superior_Line_Item.validationRule-meta.xml
<ValidationRule>
    <fullName>QL012_Entry_Invalid_Superior_Line_Item</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
NOT(ISBLANK( SuperiorQuoteLineItem__c )), 
NOT(ISPICKVAL(  SuperiorQuoteLineItem__r.ProductType__c ,&quot;Group&quot;)) 
)</errorConditionFormula>
    <errorMessage>Superior Product must be of Product Type &quot;Group&quot; 
(QL012)</errorMessage>
</ValidationRule>